--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-Pillow
-torch
-opencv-python
-numpy
-plotly
-pandas
-streamlit-webrtc
-pathlib
+streamlit>=1.24.0
+Pillow>=9.0.0
+torch>=2.0.0
+opencv-python>=4.7.0
+numpy>=1.22.0
+plotly>=5.13.0
+pandas>=1.5.0
+streamlit-webrtc>=0.45.0
+pathlib>=1.0.1
